Issue#206(title is central aligned and cross button placed at correct location)

--- a/app/MyApp/app/tabl.css
+++ b/app/MyApp/app/tabl.css
@@ -45,10 +45,7 @@
 .inner-table-shelf td{
     font-family: verdana;
     font-weight:bold;
-//text-align:center;
-//vertical-align: middle;
     width:112px;
-    height:100%;
     font:verdana;
     color:white;
 
